-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Attached Test.java used to fail with -XX:+VerifyAdapterSharing due to false sharing of the adapters for MyValue1::test and MyValue2:test. The problem is that both methods have a byte "receiver" but with different offsets. I added code to InlineKlass::collect_fields to detect this situation and add some "garbage" to the signature to distinguish it from a "local" field with a different offset. I'm not 100% convinced though that this is correct, so we should investigate in more detail. Do we need different "garbage"? Could an empty inline type produce the same signature?
See https://github.com/openjdk/valhalla/blob/714930ee3b79eea215a475a770bcf0544ca4780f/src/hotspot/share/oops/inlineKlass.cpp#L421-L424
Update: Attached Test2.java which currently fails.
See https://github.com/openjdk/valhalla/blob/714930ee3b79eea215a475a770bcf0544ca4780f/src/hotspot/share/oops/inlineKlass.cpp#L421-L424
Update: Attached Test2.java which currently fails.
- relates to
-
JDK-8377670 [lworld] CompiledEntrySignature::initialize_from_fingerprint() looks broken
-
- Open
-
- links to
-
Commit(lworld)
openjdk/valhalla/75c007b1
-
Review(lworld)
openjdk/valhalla/1679