8348547: [lworld] Investigate false adapter sharing due to inherited fields in the calling convention

Reviewed-by: thartmann